fixed spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -167,7 +167,7 @@ body {
     text-align: center;
     
     .parentsList {
-      font-size: 3.175vmin;
+      font-size: 3.52778vmin;
       font-weight: bold;
       margin-bottom: 20px; 
       font-style: normal;
@@ -189,11 +189,10 @@ body {
 .PrincipalSponsors {
   display: grid;
   grid-template-columns: repeat(2, 1fr); 
-  gap: 20px; 
+  gap: 50px; 
   padding: 20px;
   text-align: center; 
   margin-bottom: 20px;
-
 
   h2 {
     font-size: 3.52778vmin;
@@ -201,6 +200,7 @@ body {
     font-weight: bold;
     margin: 0; 
     grid-column: span 2; 
+    margin-bottom: -20px;
     
   }
 
@@ -324,7 +324,7 @@ body {
   flex-direction: column;
   align-items: center; 
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 
   h2 {
     margin-top: 30px;
@@ -351,7 +351,7 @@ body {
   grid-template-columns: 1fr 1fr; 
   gap: 20px;
   padding: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
 
 
   .column {
@@ -363,8 +363,9 @@ body {
     .Roles {
       font-size: 3.175vmin;
       font-weight: bold;
-      margin-bottom: 0px; /* Space below the section title */
+      margin-bottom: 0px;
       font-style: normal;
+      margin-bottom: 15px;
   
     }
   
@@ -546,5 +547,7 @@ body {
   
 
 }
+
+
 
 
